--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section>
             <h2>Connect with Me</h2>
             <ul>
-                <li><a href="hhttps://x.com/PaxCynica" target="_blank">X</a></li>
+                <li><a href="https://x.com/PaxCynica" target="_blank">X</a></li>
                 <li><a href="https://bsky.app/profile/paxcynica.bsky.social" target="_blank">Blue Sky</a></li>
                 <li><a href="https://www.youtube.com/@PaxCynica" target="_blank">YouTube</a></li>
                 <li><a href="https://paxcynica.substack.com/" target="_blank">Substack</a></li>
