--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Personal Webpage</title>
+    <title>Pax Cynica - Informed Skeptic</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Webpage</h1>
+        <h1>Pax Cynica</h1>
+        <p>The Informed Skeptic - Pro-Democracy</p>
     </header>
     <main>
         <section>
             <h2>Connect with Me</h2>
-            <ul>
+            <ul class="links">
                 <li><a href="https://x.com/PaxCynica" target="_blank">X</a></li>
                 <li><a href="https://bsky.app/profile/paxcynica.bsky.social" target="_blank">Blue Sky</a></li>
                 <li><a href="https://www.youtube.com/@PaxCynica" target="_blank">YouTube</a></li>
@@ -23,7 +24,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 My Personal Webpage</p>
+        <p>&copy; 2023 Pax Cynica</p>
     </footer>
     <script src="js/script.js"></script>
 </body>
