--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="assets/images/paxcynica_profile_bold.png" alt="Pax Cynica Profile" class="header-profile">
         <h1>Pax Cynica</h1>
         <p>The Informed Skeptic - Pro-Democracy</p>
     </header>
