--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
                 <li><a href="https://medium.com/@paxcynica" target="_blank">Medium</a></li>
             </ul>
         </section>
+        <!-- New Disinfo Links Section -->
+        <section class="disinfo-links">
+            <h2>Explore Disinfo Analysis</h2>
+            <ul>
+                <li><a href="disinfo/tactics.html">Manipulation Tactics & Defenses</a></li>
+                <li><a href="disinfo/prediction.html">Algorithmic Manipulation</a></li>
+                <li><a href="disinfo/apd.html">Structural Manipulation</a></li>
+                <li><a href="disinfo/conspiracies.html">Challenging Conspiracies</a></li>
+                <li><a href="disinfo/intel.html">Intelligence Networks</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
         <p>&copy; 2023 Pax Cynica</p>
