--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pax Cynica - Informed Skeptic</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <img src="assets/images/paxcynica_profile_bold.png" alt="Pax Cynica Profile" class="header-profile">
@@ -21,6 +23,17 @@
                 <li><a href="https://www.youtube.com/@PaxCynica" target="_blank">YouTube</a></li>
                 <li><a href="https://paxcynica.substack.com/" target="_blank">Substack</a></li>
                 <li><a href="https://medium.com/@paxcynica" target="_blank">Medium</a></li>
+            </ul>
+        </section>
+        <!-- Resources Section -->
+        <section class="resources-links">
+            <h2>In-Depth Reports & News Analysis</h2>
+            <ul>
+                <li>
+                    <a href="resources/index.html">
+                        Resources & Reports: Detailed analysis on yesterday's news and a collection of generated reports
+                    </a>
+                </li>
             </ul>
         </section>
         <!-- New Disinfo Links Section -->
@@ -40,4 +53,5 @@
     </footer>
     <script src="js/script.js"></script>
 </body>
+
 </html>
