--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@
         <hr>
         <section class="resources-links">
             <h2>In-Depth Reports & News Analysis</h2>
-            <ul>
-                <li>
-                    <a href="resources/index.html">
-                        Resources & Reports: Detailed analysis on yesterday's news and a collection of generated reports
-                    </a>
-                </li>
-            </ul>
+            <p>Detailed analysis on yesterday's news and a collection of generated reports.</p>
+            <a href="resources/index.html">
+                Resources & Reports
+            </a>
         </section>
     </main>
     <footer>
