--- a/resources/index.html
+++ b/resources/index.html
@@ -36,7 +36,8 @@
 </head>
 
 <body>
-    <h1>News Analysis</h1>
+    <h1>Covering April 16, 2025</h1>
+    <h2>News Analysis</h2>
     <ul>
         <li><a href="results/results_1.html">Results 1</a></li>
         <li><a href="results/results_2.html">Results 2</a></li>
@@ -49,7 +50,7 @@
         <li><a href="results/results_9.html">Results 9</a></li>
         <li><a href="results/results_10.html">Results 10</a></li>
     </ul>
-    <h1>Briefs</h1>
+    <h2>Briefs</h2>
     <ul>
         <li><a href="briefs/brief.html">Brief: Main Developments and Trends</a></li>
         <li><a href="briefs/analysis.html">Analytical Brief: Key Themes, Trends, and Implications</a></li>
