--- a/resources/index.html
+++ b/resources/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-    <h1>Covering April 16, 2025</h1>
+    <h1>Covering April 17, 2025</h1>
     <h2>News Analysis</h2>
     <ul>
         <li><a href="results/results_1.html">Results 1</a></li>
@@ -49,23 +49,12 @@
         <li><a href="results/results_8.html">Results 8</a></li>
         <li><a href="results/results_9.html">Results 9</a></li>
         <li><a href="results/results_10.html">Results 10</a></li>
-    </ul>
-    <h2>Briefs</h2>
-    <ul>
-        <li><a href="briefs/brief.html">Brief: Main Developments and Trends</a></li>
-        <li><a href="briefs/analysis.html">Analytical Brief: Key Themes, Trends, and Implications</a></li>
-        <li><a href="briefs/outline.html">Outline: Main Developments, Key Themes, and Significant Trends</a></li>
-        <li><a href="briefs/play-by-play.html">Play-by-Play Analysis of Recent Developments</a></li>
-        <li><a href="briefs/deep-dive.html">Deep Dive: US-China Competition in Artificial Intelligence</a></li>
-        <li><a href="briefs/comparative-analysis.html">Comparative Analysis: Global Responses to AI and Technology
-                Competition</a></li>
-        <li><a href="briefs/scneario-planning.html">Scenario Planning: The Future of US-China AI and Technology
-                Competition</a></li>
-        <li><a href="briefs/policy.html">Policy Analysis: Responding to the Fragmentation of Global Technology
-                Standards</a></li>
-        <li><a href="briefs/historical-context.html">Historical Context: US-China Technology and AI Rivalry</a></li>
-        <li><a href="briefs/under-the-radar.html">Under the Radar: Emerging Stories and Trends to Watch</a></li>
-        <li><a href="briefs/visual-data.html">Visual Data Report: Key Trends and Data Points</a></li>
+        <li><a href="results/results_11.html">Results 11</a></li>
+        <li><a href="results/results_12.html">Results 12</a></li>
+        <li><a href="results/results_13.html">Results 13</a></li>
+        <li><a href="results/results_14.html">Results 14</a></li>
+        <li><a href="results/results_15.html">Results 15</a></li>
+        <li><a href="results/results_16.html">Results 16</a></li>
     </ul>
 </body>
 
