--- a/resources/index.html
+++ b/resources/index.html
@@ -7,6 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
+            font-size: x-large;
             margin: 2em;
             background: #f9f9f9;
         }
