--- a/resources/index.html
+++ b/resources/index.html
@@ -55,7 +55,7 @@
     <h1>Covering April 17, 2025</h1>
     <h2>News Analysis</h2>
     <ul>
-        <li><a href="news/results_final.html">Final Report</a></li>
+        <li><a href="results/results_final.html">Final Report</a></li>
         <li><a href="results/results_1.html">Results 1</a></li>
         <li><a href="results/results_2.html">Results 2</a></li>
         <li><a href="results/results_3.html">Results 3</a></li>
