--- a/resources/index.html
+++ b/resources/index.html
@@ -53,6 +53,17 @@
 
 <body>
     <h1>Covering April 17, 2025</h1>
+    <h2>News Reports</h2>
+    <ul>
+        <li><a href="briefs/brief.html">Daily Brief</a></li>
+        <li><a href="briefs/analysis.html">Analytical Brief</a></li>
+        <li><a href="briefs/deep-dive.html">Deep Dive</a></li>
+        <li><a href="briefs/play-by-play.html">Play by Play</a></li>
+        <li><a href="briefs/policy-implications.html">Policy Implications</a></li>
+        <li><a href="briefs/under-the-rader.html">Under the Radar</a></li>
+
+    </ul>
+
     <h2>News Analysis</h2>
     <ul>
         <li><a href="results/results_final.html">Final Report</a></li>
