--- a/disinfo/machine-targeting.html
+++ b/disinfo/machine-targeting.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Social Media Card Generator</title>
+    <title>Machine Targeting</title>
     <link rel="stylesheet" href="style/styles.css">
 </head>
 
@@ -31,9 +31,9 @@
             <button id="download-all-btn" class="download-all-btn">Generate & Download All Cards</button>
         </div>
     </div>
-    <script src="src/intelligence_network.js"></script>
+    <script src="src/prediction.js"></script>
 
-    <script src="app/app_intelligence_network.js"></script>
+    <script src="app/app_prediction.js"></script>
     <script src="app/dataLoader.js"></script>
     <script src="app/cardRenderer.js"></script>
     <script src="app/formatters.js"></script>
