--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <section class="disinfo-links">
             <h2>Explore Disinfo Analysis</h2>
             <ul>
-                <li><a href="disinfo/tactics.html">Manipulation Tactics & Defenses</a></li>
-                <li><a href="disinfo/prediction.html">Algorithmic Manipulation</a></li>
-                <li><a href="disinfo/apd.html">Structural Manipulation</a></li>
-                <li><a href="disinfo/conspiracies.html">Challenging Conspiracies</a></li>
-                <li><a href="disinfo/intel.html">Intelligence Networks</a></li>
+                <li><a href="disinfo/manipulation-tactics.html">Manipulation Tactics & Defenses</a></li>
+                <li><a href="disinfo/machine-targeting.html">Machine Targeting</a></li>
+                <li><a href="disinfo/adaptive-precision-deployment.html">Adaptive Precision Deployment (IW)</a></li>
+                <li><a href="disinfo/challenge-conspiracies.html">Challenge Conspiracies</a></li>
+                <li><a href="disinfo/human-networks.html">Human Networks</a></li>
             </ul>
         </section>
         <!-- Resources Section -->
