--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <h2>Explore Disinfo Analysis</h2>
             <ul>
                 <li><a href="disinfo/manipulation-tactics.html">Manipulation Tactics & Defenses</a></li>
+                <li><a href="disinfo/interpersonal-manipulation.html">Interpersonal Manipulation</a></li>
                 <li><a href="disinfo/machine-targeting.html">Machine Targeting</a></li>
                 <li><a href="disinfo/adaptive-precision-deployment.html">Adaptive Precision Deployment (IW)</a></li>
                 <li><a href="disinfo/challenge-conspiracies.html">Challenge Conspiracies</a></li>
