--- a/resources/index.html
+++ b/resources/index.html
@@ -59,7 +59,15 @@
     <h2>News Analysis</h2>
     <ul>
         <li><a href="analysis/daily_summary_2025-04-18.html">Daily Summary 2025 04 18</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_1.html">News Digest 2025 04 18 1</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_1.html">News Digest 2025 04 18 1</a></li>1
+        <li><a href="analysis/news_digest_2025-04-18_2.html">News Digest 2025 04 18 2</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_3.html">News Digest 2025 04 18 3</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_4.html">News Digest 2025 04 18 4</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_5.html">News Digest 2025 04 18 5</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_6.html">News Digest 2025 04 18 6</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_7.html">News Digest 2025 04 18 7</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_8.html">News Digest 2025 04 18 8</a></li>
+        <li><a href="analysis/news_digest_2025-04-18_9.html">News Digest 2025 04 18 9</a></li>
         <li><a href="analysis/news_digest_2025-04-18_10.html">News Digest 2025 04 18 10</a></li>
         <li><a href="analysis/news_digest_2025-04-18_11.html">News Digest 2025 04 18 11</a></li>
         <li><a href="analysis/news_digest_2025-04-18_12.html">News Digest 2025 04 18 12</a></li>
@@ -70,14 +78,6 @@
         <li><a href="analysis/news_digest_2025-04-18_17.html">News Digest 2025 04 18 17</a></li>
         <li><a href="analysis/news_digest_2025-04-18_18.html">News Digest 2025 04 18 18</a></li>
         <li><a href="analysis/news_digest_2025-04-18_19.html">News Digest 2025 04 18 19</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_2.html">News Digest 2025 04 18 2</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_3.html">News Digest 2025 04 18 3</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_4.html">News Digest 2025 04 18 4</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_5.html">News Digest 2025 04 18 5</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_6.html">News Digest 2025 04 18 6</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_7.html">News Digest 2025 04 18 7</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_8.html">News Digest 2025 04 18 8</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_9.html">News Digest 2025 04 18 9</a></li>
     </ul>
 
     <h2>Archives</h2>
