--- a/resources/index.html
+++ b/resources/index.html
@@ -59,7 +59,7 @@
     <h2>News Analysis</h2>
     <ul>
         <li><a href="analysis/daily_summary_2025-04-18.html">Daily Summary 2025 04 18</a></li>
-        <li><a href="analysis/news_digest_2025-04-18_1.html">News Digest 2025 04 18 1</a></li>1
+        <li><a href="analysis/news_digest_2025-04-18_1.html">News Digest 2025 04 18 1</a></li>
         <li><a href="analysis/news_digest_2025-04-18_2.html">News Digest 2025 04 18 2</a></li>
         <li><a href="analysis/news_digest_2025-04-18_3.html">News Digest 2025 04 18 3</a></li>
         <li><a href="analysis/news_digest_2025-04-18_4.html">News Digest 2025 04 18 4</a></li>
