--- a/resources/specialized-reports/08-13-37/deep-dive-on-a-single-theme_2025-04-20.html
+++ b/resources/specialized-reports/08-13-37/deep-dive-on-a-single-theme_2025-04-20.html
@@ -300,6 +300,12 @@
             <b>Mitigation:</b> Implement robust physical security measures and develop side-channel attack countermeasures.
           </div>
         </div>
+
+        <div class="tech-diagram">
+          <img src="assets/images/quantum_computing_diagram.png" alt="Quantum Computing Diagram" style="max-width:80%; height:auto;">
+          <p style="font-size:0.8em; color:#777;">Simplified Diagram of Quantum Computing Process</p>
+        </div>
+
       </div>
     </div>
   </section>
